Target Java 8 so the core and Spigot backend run on 1.8-1.16 servers